# polling_app

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20250227093513_init.sql
backend/src/: config.rs  db.rs  error.rs  main.rs  startup.rs
backend/src/auth/: mod.rs
backend/src/models/: mod.rs  poll.rs  user.rs
backend/src/routes/: auth.rs  polls.rs
backend/src/services/: auth_service.rs
backend/src/websocket/: mod.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/polls/[pollId]/: page.tsx
frontend/app/polls/[pollId]/results/: page.tsx
frontend/app/polls/all/: page.tsx
frontend/app/polls/manage/: page.tsx
frontend/app/polls/new/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: Navbar.tsx
frontend/components/polls/: PollCard.tsx  PollForm.tsx
frontend/lib/: api.ts  auth.ts  store.ts
frontend/styles/: globals.css
