[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-extra = "0.10.0"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
lettre = "0.11.14"
serde = "1.0.218"
serde_json = "1.0.139"
sqlx = "0.8.3"
tokio = "1.43.0"
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.15.0"
webauthn-rs = "0.5.1"
