[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http1", "http2"] }
axum-extra = "0.10.0"
hyper = { version = "1.0", features = ["server"] }  # Updated to 1.0
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
lettre = "0.11.14"
serde = "1.0.218"
serde_json = "1.0.139"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
dotenvy = "0.15"  # For loading environment variables
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = "1.15.0"
webauthn-rs = "0.5.1"
openssl = { version = "0.10", features = ["vendored"] }
tower = "0.5.2"